Rewrite of the Bot to make it more modular